<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/content_scr"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.yuexun.book_read.view.custom.ContentPageView
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <RelativeLayout
        android:id="@+id/rl_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_gravity="bottom"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/rl_progress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center_horizontal"
                android:layout_marginBottom="20dp"
                android:background="?attr/colorPrimary"
                android:padding="20dp"
                android:visibility="gone">

                <TextView
                    android:id="@+id/tv_progress"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="00.00%"
                    android:textColor="@color/white"
                    android:textSize="16sp" />
            </RelativeLayout>

            <LinearLayout
                android:id="@+id/bookpop_bottom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/read_dialog_bg"
                android:baselineAligned="false"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tv_pre"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/read_setting_pre"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        android:textSize="16sp" />

                    <SeekBar
                        android:id="@+id/sb_progress"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:max="10000"
                        android:visibility="gone"></SeekBar>

                    <TextView
                        android:id="@+id/tv_next"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/read_setting_next"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        android:textSize="16sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingBottom="5dp">

                    <TextView
                        android:id="@+id/tv_directory"
                        style="@style/text_style"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:drawableTop="@mipmap/directory"
                        android:gravity="center"
                        android:visibility="gone"
                        android:text="@string/read_setting_directory" />

                    <TextView
                        android:id="@+id/tv_dayornight"
                        style="@style/text_style"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:drawableTop="@mipmap/dayornight"
                        android:gravity="center"
                        android:text="@string/read_setting_night" />

                    <TextView
                        android:id="@+id/tv_pagemode"
                        style="@style/text_style"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:drawableTop="@mipmap/pagemode"
                        android:gravity="center"
                        android:text="@string/read_setting_pagemode" />

                    <TextView
                        android:id="@+id/tv_setting"
                        style="@style/text_style"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:drawableTop="@mipmap/setting"
                        android:gravity="center"
                        android:text="@string/read_setting_set" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>

    <!--<TextView-->
    <!--android:id="@+id/chapter_title"-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_centerInParent="true"-->
    <!--android:layout_gravity="center_horizontal"-->
    <!--android:layout_marginBottom="10dp"-->
    <!--android:layout_marginTop="10dp"-->
    <!--android:text="章节名"-->
    <!--android:textColor="@color/dark"-->
    <!--android:textSize="23dp" />-->

    <!--<TextView-->
    <!--android:id="@+id/content"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:padding="20dp"-->
    <!--android:text="    这里是正文"-->
    <!--android:textColor="@color/dark"-->
    <!--android:textSize="16dp" />-->

    <!--<LinearLayout-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="30dp"-->
    <!--android:layout_marginBottom="5dp"-->
    <!--android:layout_marginTop="10dp"-->
    <!--android:orientation="horizontal">-->

    <!--<Button-->
    <!--android:id="@+id/result_previous"-->
    <!--android:layout_width="0dp"-->
    <!--android:layout_height="match_parent"-->
    <!--android:layout_weight="1"-->
    <!--android:background="@drawable/button_normal"-->
    <!--android:text="上一页" />-->

    <!--<TextView-->
    <!--android:id="@+id/result_page"-->
    <!--android:layout_width="0dp"-->
    <!--android:layout_height="match_parent"-->
    <!--android:layout_weight="1"-->
    <!--android:gravity="center"-->
    <!--android:textColor="@color/dark"-->
    <!--android:textSize="16dp"-->
    <!--android:visibility="invisible" />-->

    <!--<Button-->
    <!--android:id="@+id/result_next"-->
    <!--android:layout_width="0dp"-->
    <!--android:layout_height="match_parent"-->
    <!--android:layout_weight="1"-->
    <!--android:background="@drawable/button_normal"-->
    <!--android:text="下一页" />-->
    <!--</LinearLayout>-->
</RelativeLayout>
